PALO-745 fix for IE11 checkout layout issue

--- a/Resources/assets/css/_checkout.scss
+++ b/Resources/assets/css/_checkout.scss
@@ -5,7 +5,9 @@
 }
 
 .checkout {
-  flex: 1;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
   position: relative;
 }
 
